Fixing rotation , align text and mores

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,28 @@ h1 {
 .container-flud {
   padding: 3% 5%;
 }
+.navbar {
+  padding: 0 0 4.5rem;
+}
+.nav-items {
+  padding: 0 45px;
+}
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.font-link {
+  font-family: "Montserrat-Light";
+  font-size: 1.2rem;
+}
+
+/* Bottom-Download */
+.download-buttom {
+  margin: 5% 3% 5% 0;
+}
+/* title image */
+.title-image {
+  width: 50%;
+  transform: rotate(25deg);
+}
